[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json", "blocking"] }
serde = "1.0.151"
serde_json = "1.0.91"
serde_derive = "1.0.151"
rand = "0.8.5"
regex = "1.7.0"
futures = { version = "0.3.25", features = ["thread-pool"] }
surf = "2.3.2"
